# django-csp-247

./: README.md  manage.py  pyproject.toml
django_csp_247/: asgi.py  middleware.py  settings.py  tests.py  urls.py  views.py  wsgi.py
